<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.smaretparentalcare.ChildFirstScreen" >

    <EditText
        android:id="@+id/editTextReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/reply" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextReply"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:background="@drawable/customview_background"
        android:textColor="#FFFFFF"
        android:text="@string/Send" />
    <TextView
        android:id="@+id/textViewPMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/msg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
