<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 	android:gravity="center_vertical|center_horizontal" 
 	 tools:context="com.example.smaretparentalcare.MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:ems="10" >

    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="40dp"
        android:ems="10"
		android:inputType="textPassword"
        android:layout_centerHorizontal="true"
		 android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/password" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
  		android:layout_marginTop="48dp"
        android:onClick="loginFunc"
        android:textColor="#FFFFFF"
 		android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@drawable/customview_background"
        android:text="@string/login" />

    
       
</RelativeLayout>
