<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.smaretparentalcare.Stats" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
         android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/splash" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/dummy_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/location_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_textView"
        android:layout_below="@+id/name_textView"
        android:layout_marginTop="1dp"
        android:text="@string/dummy_location"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    	<TextView
        android:id="@+id/stats_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location_textView"
        android:layout_below="@+id/location_textView"
        android:layout_marginTop="1dp"
        android:text="@string/dummy_stats"
        android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
    
</RelativeLayout>
