<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.smaretparentalcare.Verification" >
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNumber"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="82dp"
        android:layout_marginLeft="74dp"
        android:background="@drawable/customview_background"
        android:onClick="addChildFunc"
        android:text="@string/Add"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" /> 
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:src="@drawable/unknownprofile" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/text_ch_phn"
        android:inputType="phone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:ems="10" 
        android:hint="@string/Child_Name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- <ImageView
        android:id="@+id/imageViewcheck"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/unknownprofile" /> -->
    
</RelativeLayout>
